# argdown

./: .gitignore  README.rst  pyproject.toml
argdown/: __init__.py  __main__.py  argdown.py
tests/: dummy.md  dummy.py  test_argdown.py
