[tool.poetry]
name = "argdown"
version = "1.2.0"
description = "Markdown export for the argparse module"
authors = ["Rebecca Turner"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/UoMResearchIT/argdown"
keywords = ["markdown", "argparse"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup"
]

packages = [{include = "argdown"}]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.scripts]
argdown = "argdown:console"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"